# SR_desktop

./: .gitignore  CMakeLists.txt  README.md
Header/: core_sr_desktop.h
Sources/: main.c
